--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   url_launcher: ^6.2.6
   flutter_linkify: ^6.0.0
   url_launcher_web: ^2.3.1
+  flutter_riverpod: ^2.5.1
+  logger: ^2.2.0
 
 dev_dependencies:
   flutter_test:
